# par2-cleanhistory

./: .gitattributes  .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  PORTING  README  README_FIRST.txt  ROADMAP  aclocal.m4  commandline.cpp  commandline.h  config.h.in  configure  configure.ac  creatorpacket.cpp  criticalpacket.h  datablock.cpp  descriptionpacket.cpp  diskfile.cpp  diskfile.h  galois.cpp  galois.h  letype.h  mainpacket.cpp  md5.cpp  md5.h  par2cmdline.cpp  par2cmdline.h  par2cmdline.vc8.sln  par2cmdline.vc8.vcproj  par2cmdline.vc9.vcproj  par2cmdline.vcproj  par2creator.cpp  par2creator.h  par2creatorsourcefile.cpp  par2creatorsourcefile.h  par2fileformat.cpp  par2fileformat.h  (+17 more)
par2_cuda/: par2.cu  par2_kernel.cu
win32-prebuilt/: par2cmdline.vc8.vcproj
win32-prebuilt/Using VS2005 to ship legacy code for XP and Windows 2000/: CxxFrameHandler3_to_CxxFrameHandler.asm  Using VS2005 to ship legacy code for XP and Windows 2000.html
win64/: README.txt
win64-prebuilt/: README.txt
